--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "dayjs": "^1.11.7",
+    "framer-motion": "^9.1.6",
     "immer": "^9.0.19",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
