--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "framer-motion": "^9.1.6",
     "immer": "^9.0.19",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
