--- a/package.json
+++ b/package.json
@@ -12,25 +12,28 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "framer-motion": "^9.1.6",
+    "i18next": "^22.4.10",
     "immer": "^9.0.19",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "use-sound": "^4.0.1",
-    "zod": "^3.20.6"
+    "zod": "^3.20.6",
+    "zod-i18n-map": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
