--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build-tokens": "style-dictionary build"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.11",
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
@@ -27,7 +26,8 @@
     "styled-components": "^5.3.6",
     "use-sound": "^4.0.1",
     "zod": "^3.20.6",
-    "zod-i18n-map": "^2.7.0"
+    "zod-i18n-map": "^2.7.0",
+    "zod-validation-error": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
